[gd_scene load_steps=35 format=2]

[ext_resource path="res://assets/images/game3_title.png" type="Texture" id=1]
[ext_resource path="res://assets/images/updated/game3_bg1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/updated/game3_gameplay.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/public_start_yellow.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/public_start_green.png" type="Texture" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/A_Pleasant_Day.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/images/game3_count_3.png" type="Texture" id=8]
[ext_resource path="res://assets/images/game3_count_2.png" type="Texture" id=9]
[ext_resource path="res://assets/images/game3_count_start.png" type="Texture" id=10]
[ext_resource path="res://assets/images/game3_count_1.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/public_music.png" type="Texture" id=12]
[ext_resource path="res://assets/buttons/public_back.png" type="Texture" id=13]
[ext_resource path="res://Result.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/buttons/public_continue_green.png" type="Texture" id=15]
[ext_resource path="res://assets/images/game1_board_back.png" type="Texture" id=16]
[ext_resource path="res://assets/buttons/public_home_yellow.png" type="Texture" id=17]
[ext_resource path="res://assets/buttons/public_continue_yellow.png" type="Texture" id=18]
[ext_resource path="res://assets/buttons/public_home_green.png" type="Texture" id=19]
[ext_resource path="res://assets/fonts/NotoSansTC-Bold.otf" type="DynamicFontData" id=20]
[ext_resource path="res://assets/sounds/hint_title.mp3" type="AudioStream" id=21]
[ext_resource path="res://assets/sounds/countDown.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/sounds/hint_start.mp3" type="AudioStream" id=23]
[ext_resource path="res://assets/sounds/click_btn.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/images/updated/RCGS_logo.png" type="Texture" id=25]

[sub_resource type="Animation" id=7]
resource_name = "Flash"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture_normal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Start"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 3.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CountDownMusic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../StartGameMusic:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.95, 1, 1.4, 1.6, 1.95, 2, 2.4, 2.6, 2.95, 3, 3.4, 3.6, 3.95, 4 ),
"transitions": PoolRealArray( 0.5, 1.5, 1.5, 0.5, 0.5, 1.5, 1.5, 0.5, 0.5, 1.5, 1.5, 0.5, 0.5, 1.5, 1.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 0.25, 0.25 ), Vector2( 0.5, 0.5 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 0.25, 0.25 ), Vector2( 0.5, 0.5 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 0.25, 0.25 ), Vector2( 0.5, 0.5 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 0.25, 0.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "onClick"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.744275, 0.744275 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "onClickOver"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.744275, 0.744275 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "onClick"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.744275, 0.744275 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "onClickOver"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.744275, 0.744275 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Slide_down"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1100 ), Vector2( 0, 24 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Slide_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 24 ), Vector2( 0, -1100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 20 )

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 963.132, 724.349 )
scale = Vector2( 0.942254, 0.942254 )
texture = ExtResource( 2 )

[node name="TitleContainer" type="Sprite" parent="."]

[node name="StartButton" type="Sprite" parent="TitleContainer"]
position = Vector2( 976, 760 )

[node name="StartButton" type="TextureButton" parent="TitleContainer/StartButton"]
margin_left = -224.0
margin_top = 440.0
margin_right = 217.0
margin_bottom = 605.0
texture_normal = ExtResource( 4 )

[node name="StartButtonAnimation" type="AnimationPlayer" parent="TitleContainer/StartButton/StartButton"]
anims/Flash = SubResource( 7 )

[node name="Title" type="Sprite" parent="TitleContainer"]
position = Vector2( 976, 192 )
texture = ExtResource( 1 )

[node name="RulesBoard" type="Sprite" parent="TitleContainer"]
position = Vector2( 976, 760 )
texture = ExtResource( 3 )

[node name="SchoolLogo" type="Sprite" parent="TitleContainer"]
position = Vector2( 184, 176 )
texture = ExtResource( 25 )

[node name="TitleVO" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ResultContainer" type="Sprite" parent="."]
visible = false

[node name="Result" parent="ResultContainer" instance=ExtResource( 14 )]

[node name="GameSceneContainer" type="Sprite" parent="."]
visible = false

[node name="Game" type="Sprite" parent="GameSceneContainer"]

[node name="GameStartContainer" type="Sprite" parent="GameSceneContainer"]
position = Vector2( 965, 736 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="GameStartAnimation" type="AnimationPlayer" parent="GameSceneContainer/GameStartContainer"]
anims/Start = SubResource( 3 )

[node name="GameRuleVO" type="AudioStreamPlayer" parent="GameSceneContainer/GameStartContainer"]

[node name="StartGameMusic" type="AudioStreamPlayer" parent="GameSceneContainer"]
stream = ExtResource( 23 )

[node name="CountDownMusic" type="AudioStreamPlayer" parent="GameSceneContainer"]
stream = ExtResource( 22 )

[node name="ButtonContainer" type="Sprite" parent="."]
pause_mode = 2
visible = false

[node name="BGM" type="Sprite" parent="ButtonContainer"]
position = Vector2( 1714, 144 )
scale = Vector2( 0.744275, 0.744275 )

[node name="BGMButton" type="TextureButton" parent="ButtonContainer/BGM"]
margin_left = -67.1794
margin_top = -68.5231
margin_right = 63.8206
margin_bottom = 69.4769
texture_normal = ExtResource( 12 )

[node name="BGMAnimation" type="AnimationPlayer" parent="ButtonContainer/BGM/BGMButton"]
root_node = NodePath("../..")
anims/onClick = SubResource( 5 )
anims/onClickOver = SubResource( 6 )

[node name="Exit" type="Sprite" parent="ButtonContainer"]
position = Vector2( 1840.82, 144 )
scale = Vector2( 0.744275, 0.744275 )

[node name="ExitButton" type="TextureButton" parent="ButtonContainer/Exit"]
margin_left = -65.8633
margin_top = -68.5469
margin_right = 64.1367
margin_bottom = 69.4531
texture_normal = ExtResource( 13 )

[node name="ExitAnimation" type="AnimationPlayer" parent="ButtonContainer/Exit/ExitButton"]
root_node = NodePath("../..")
anims/onClick = SubResource( 8 )
anims/onClickOver = SubResource( 9 )

[node name="ButtonAudio" type="AudioStreamPlayer" parent="ButtonContainer"]
stream = ExtResource( 24 )

[node name="LeaveContainer" type="Sprite" parent="."]
pause_mode = 2
visible = false
position = Vector2( 976, 736 )

[node name="ColorRect" type="ColorRect" parent="LeaveContainer"]
margin_left = -976.0
margin_top = -736.0
margin_right = 976.0
margin_bottom = 768.0
color = Color( 0.0745098, 0.0705882, 0.0705882, 0.709804 )

[node name="LeaveBoard" type="Sprite" parent="LeaveContainer"]
position = Vector2( 0, -1100 )
texture = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LeaveContainer/LeaveBoard"]
anims/Slide_down = SubResource( 10 )
anims/Slide_up = SubResource( 11 )

[node name="HomeButton" type="Sprite" parent="LeaveContainer/LeaveBoard"]
position = Vector2( 0, -24 )

[node name="HomeButton" type="TextureButton" parent="LeaveContainer/LeaveBoard/HomeButton"]
margin_left = -480.0
margin_top = 78.0
margin_right = -39.0
margin_bottom = 242.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 19 )

[node name="ResumeButton" type="Sprite" parent="LeaveContainer/LeaveBoard"]
position = Vector2( 0, -24 )

[node name="ResumeButton" type="TextureButton" parent="LeaveContainer/LeaveBoard/ResumeButton"]
margin_left = 32.0
margin_top = 78.0
margin_right = 473.0
margin_bottom = 243.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 15 )

[node name="VersionLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 1392.0
margin_right = 96.0
margin_bottom = 1422.0
custom_fonts/font = SubResource( 12 )
text = "Ver:1.10"

[connection signal="pressed" from="TitleContainer/StartButton/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="finished" from="GameSceneContainer/GameStartContainer/GameRuleVO" to="." method="_on_GameRuleVO_finished"]
[connection signal="button_down" from="ButtonContainer/BGM/BGMButton" to="." method="_on_BGMButton_button_down"]
[connection signal="button_up" from="ButtonContainer/BGM/BGMButton" to="." method="_on_BGMButton_button_up"]
[connection signal="button_down" from="ButtonContainer/Exit/ExitButton" to="." method="_on_ExitButton_button_down"]
[connection signal="button_up" from="ButtonContainer/Exit/ExitButton" to="." method="_on_ExitButton_button_up"]
[connection signal="pressed" from="LeaveContainer/LeaveBoard/HomeButton/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="LeaveContainer/LeaveBoard/ResumeButton/ResumeButton" to="." method="_on_ResumeButton_pressed"]
